Chat box movement fix on Firefox (#39)
Fixes a bug on Firefox clients that caused text from the webpage to be selected when you move a chat box, which causes the text to flicker blue.

--- a/styles/online.css
+++ b/styles/online.css
@@ -396,6 +396,7 @@
 	font-size: 0.8em;
 	padding: 0px 0px 2px 7px;
 	cursor: move;
+	user-select: none;
 }
 .chatbar .chatbullet {
 	position: relative;
